// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fastapi project generator > should match snapshot > main-snapshot 1`] = `
{
  "apps/test_api/proj_test_api/__init__.py": """"Automatically generated by Nx."""
",
  "apps/test_api/proj_test_api/init.py": "import json
import os
import uuid
from collections.abc import AsyncIterator, Callable
from typing import Any
from urllib.parse import urlparse

from aws_lambda_powertools import Logger, Metrics, Tracer
from aws_lambda_powertools.metrics import MetricUnit
from fastapi import FastAPI, Request, Response
from fastapi.responses import JSONResponse, StreamingResponse
from fastapi.routing import APIRoute
from pydantic import BaseModel
from starlette.middleware.exceptions import ExceptionMiddleware

os.environ["POWERTOOLS_METRICS_NAMESPACE"] = "TestApi"
os.environ["POWERTOOLS_SERVICE_NAME"] = "TestApi"

logger: Logger = Logger()
metrics: Metrics = Metrics()
tracer: Tracer = Tracer()


class InternalServerErrorDetails(BaseModel):
    detail: str


class JsonStreamingResponse(StreamingResponse):
    """A streaming response that serializes items to JSON Lines format."""

    media_type = "application/jsonl"

    def __init__(
        self,
        content: AsyncIterator[BaseModel],
        status_code: int = 200,
        headers: dict[str, str] | None = None,
        **kwargs: Any,
    ) -> None:
        """Stream json lines from an async iterator yielding Pydantic models"""
        super().__init__(
            content=self._serialize(content),
            status_code=status_code,
            headers=headers,
            media_type=self.media_type,
            **kwargs,
        )

    @staticmethod
    async def _serialize(
        content: AsyncIterator[BaseModel],
    ) -> AsyncIterator[bytes]:
        """Serialize Pydantic models to JSON Lines format."""
        async for item in content:
            yield (item.model_dump_json() + "\\n").encode("utf-8")

    @staticmethod
    def openapi_response(
        item_model: type[BaseModel],
        description: str = "Streaming response",
    ) -> dict[str, Any]:
        """Generate an OpenAPI application/jsonl response for a stream of the given model"""
        return {
            "description": description,
            "content": {
                "application/jsonl": {
                    "itemSchema": {
                        "$ref": f"#/components/schemas/{item_model.__name__}"
                    },
                }
            },
            # Include the model so FastAPI registers the schema in components/schemas
            "model": item_model,
        }


app = FastAPI(
    title="TestApi",
    responses={500: {"model": InternalServerErrorDetails}},
    generate_unique_id_function=lambda route: route.name,
)


# Add cors middleware
@app.middleware("http")
async def cors_middleware(request: Request, call_next):
    response = await call_next(request)

    origin = request.headers.get("origin")
    allowed_origins = (
        os.environ.get("ALLOWED_ORIGINS", "").split(",")
        if os.environ.get("ALLOWED_ORIGINS")
        else []
    )

    is_localhost = origin and urlparse(origin).hostname in ["localhost", "127.0.0.1"]
    is_allowed_origin = origin and origin in allowed_origins

    cors_origin = "*"
    if allowed_origins and not is_localhost:
        cors_origin = origin if is_allowed_origin else allowed_origins[0]

    response.headers["Access-Control-Allow-Origin"] = cors_origin
    response.headers["Access-Control-Allow-Methods"] = "*"
    response.headers["Access-Control-Allow-Headers"] = "*"

    return response


# Add exception middleware(s)
app.add_middleware(ExceptionMiddleware, handlers=app.exception_handlers)


@app.exception_handler(Exception)
async def unhandled_exception_handler(request, err):
    logger.exception("Unhandled exception")

    metrics.add_metric(name="Failure", unit=MetricUnit.Count, value=1)

    return JSONResponse(
        status_code=500,
        content=InternalServerErrorDetails(detail="Internal Server Error").model_dump(),
    )


@app.middleware("http")
async def metrics_handler(request: Request, call_next):
    metrics.add_dimension("route", f"{request.method} {request.url.path}")
    metrics.add_metric(name="RequestCount", unit=MetricUnit.Count, value=1)

    response = await call_next(request)

    if response.status_code == 200:
        metrics.add_metric(name="Success", unit=MetricUnit.Count, value=1)

    return response


# Add correlation id middleware
@app.middleware("http")
async def add_correlation_id(request: Request, call_next):
    # Get correlation id from X-Correlation-Id header
    corr_id = request.headers.get("x-correlation-id")
    if not corr_id:
        # Try to get request id from Lambda context (forwarded by Lambda Web Adapter)
        lambda_context_header = request.headers.get("x-amzn-lambda-context")
        if lambda_context_header:
            try:
                lambda_context = json.loads(lambda_context_header)
                corr_id = lambda_context.get("request_id")
            except (json.JSONDecodeError, KeyError):
                pass
    if not corr_id:
        # If still empty, use uuid
        corr_id = uuid.uuid4().hex

    # Add correlation id to logs
    logger.set_correlation_id(corr_id)

    response = await call_next(request)

    # Return correlation header in response
    response.headers["X-Correlation-Id"] = corr_id
    return response


class LoggerRouteHandler(APIRoute):
    def get_route_handler(self) -> Callable:
        original_route_handler = super().get_route_handler()

        async def route_handler(request: Request) -> Response:
            # Add fastapi context to logs
            ctx = {
                "path": request.url.path,
                "route": self.path,
                "method": request.method,
            }
            logger.append_keys(fastapi=ctx)
            logger.info("Received request")

            return await original_route_handler(request)

        return route_handler


app.router.route_class = LoggerRouteHandler
",
  "apps/test_api/proj_test_api/main.py": "from typing import Annotated

import uvicorn
from fastapi import Query
from pydantic import BaseModel

from .init import app, tracer


class EchoOutput(BaseModel):
    message: str


@app.get("/echo")
@tracer.capture_method
def echo(message: Annotated[str, Query(max_length=1024)]) -> EchoOutput:
    return EchoOutput(message=f"{message}")


if __name__ == "__main__":
    uvicorn.run("proj_test_api.main:app", port=8000)
",
  "apps/test_api/scripts/generate_open_api.py": "import json
import os
import sys

from proj_test_api.main import app

os.makedirs(os.path.dirname(sys.argv[1]), exist_ok=True)
with open(sys.argv[1], "w") as f:
    json.dump(app.openapi(), f)
",
  "apps/test_api/tests/__init__.py": """"unit tests."""
",
  "apps/test_api/tests/conftest.py": """"Unit tests configuration module."""
",
  "apps/test_api/tests/test_main.py": "#
# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0
#


def test_main():
    pass
",
  "apps/test_api/tests/test_noop.py": "def test_noop():
    pass
",
}
`;

exports[`fastapi project generator > should set up shared constructs for http > http-api.ts 1`] = `
"import { Construct } from 'constructs';
import { RuntimeConfig } from '../runtime-config.js';
import {
  ApiIntegrations,
  HttpApiIntegration,
  OperationDetails,
} from './utils.js';
import { CfnOutput, Stack } from 'aws-cdk-lib';
import {
  HttpApi as _HttpApi,
  HttpApiProps as _HttpApiProps,
  HttpMethod,
  HttpStage,
  LogGroupLogDestination,
  ThrottleSettings,
} from 'aws-cdk-lib/aws-apigatewayv2';
import { LogGroup } from 'aws-cdk-lib/aws-logs';
import { Key } from 'aws-cdk-lib/aws-kms';
import { ServicePrincipal } from 'aws-cdk-lib/aws-iam';
import { suppressRules } from '../checkov.js';

/**
 * Properties for creating an HttpApi construct.
 *
 * @template TIntegrations - Record mapping operation names to their integrations
 * @template TOperation - String literal type representing operation names
 */
export interface HttpApiProps<
  TIntegrations extends ApiIntegrations<TOperation, HttpApiIntegration>,
  TOperation extends string,
> extends _HttpApiProps {
  /**
   * Unique name for the API, used in runtime configuration
   */
  readonly apiName: string;
  /**
   * Map of operation names to their API path and HTTP method details
   */
  readonly operations: Record<TOperation, OperationDetails>;
  /**
   * Map of operation names to their API Gateway integrations
   */
  readonly integrations: TIntegrations;
  /**
   * Default throttling limits applied to the API's default stage.
   *
   * @default { rateLimit: 10000, burstLimit: 5000 }
   */
  readonly throttle?: ThrottleSettings;
}

/**
 * A CDK construct that creates and configures an AWS API Gateway HTTP API.
 *
 * This class extends the base CDK HttpApi with additional functionality:
 * - Type-safe operation and integration management
 * - Automatic resource creation based on path patterns
 * - Integration with runtime configuration for client discovery
 *
 * @template TOperation - String literal type representing operation names
 * @template TIntegrations - Record mapping operation names to their integrations
 */
export class HttpApi<
  TOperation extends string,
  TIntegrations extends ApiIntegrations<TOperation, HttpApiIntegration>,
> extends Construct {
  /** The underlying CDK HttpApi instance */
  public readonly api: _HttpApi;

  /** Default auto-deployed stage */
  public readonly defaultStage: HttpStage;

  /** Map of operation names to their API Gateway integrations */
  public readonly integrations: TIntegrations;

  constructor(
    scope: Construct,
    id: string,
    {
      apiName,
      operations,
      integrations,
      throttle = { rateLimit: 10000, burstLimit: 5000 },
      ...props
    }: HttpApiProps<TIntegrations, TOperation>,
  ) {
    super(scope, id);
    this.integrations = integrations;

    // Create the API Gateway REST API
    this.api = new _HttpApi(this, 'Api', {
      createDefaultStage: false,
      ...props,
    });

    // Customer-managed key for access log encryption at rest
    const logsKey = new Key(this, 'AccessLogsKey', {
      enableKeyRotation: true,
    });
    const stack = Stack.of(this);
    logsKey.grantEncryptDecrypt(
      new ServicePrincipal(\`logs.\${stack.region}.amazonaws.com\`),
    );

    const accessLogGroup = new LogGroup(this, 'AccessLogs', {
      encryptionKey: logsKey,
    });
    suppressRules(
      accessLogGroup,
      ['CKV_AWS_66', 'CKV_AWS_338'],
      'Logs are retained forever',
    );

    this.defaultStage = new HttpStage(this, 'DefaultStage', {
      httpApi: this.api,
      autoDeploy: true,
      throttle,
      accessLogSettings: {
        destination: new LogGroupLogDestination(accessLogGroup),
      },
    });

    // Resolve the integration for a given operation.
    // If the operation has a dedicated integration, use it; otherwise fall back to $router.
    const resolveIntegration = (op: TOperation): HttpApiIntegration => {
      const record = integrations as Record<string, HttpApiIntegration>;
      if (op in record) {
        return record[op];
      }
      if ('$router' in record) {
        return record['$router'];
      }
      throw new Error(
        \`No integration found for operation '\${op}' and no $router integration available\`,
      );
    };

    // Create API resources and methods for each operation
    (Object.entries(operations) as [TOperation, OperationDetails][]).map(
      ([op, details]) => {
        const integration = resolveIntegration(op);
        this.api.addRoutes({
          path: details.path.startsWith('/')
            ? details.path
            : \`/\${details.path}\`,
          methods: [details.method as HttpMethod],
          integration: integration.integration,
          ...integration.options,
        });
      },
    );

    new CfnOutput(this, \`\${apiName}Url\`, {
      value: this.defaultStage.url!,
    });

    // Register the API URL in runtime configuration for client discovery
    const rc = RuntimeConfig.ensure(this);
    rc.set('connection', 'apis', {
      ...rc.get('connection').apis,
      [apiName]: this.defaultStage.url!,
    });
  }

  /**
   * Return the API url
   */
  public get url() {
    return this.defaultStage.url;
  }
}
"
`;

exports[`fastapi project generator > should set up shared constructs for http > test-api.ts 1`] = `
"import { Construct } from 'constructs';
import * as url from 'url';
import { Distribution } from 'aws-cdk-lib/aws-cloudfront';
import {
  Code,
  Runtime,
  Function,
  FunctionProps,
  Tracing,
  LayerVersion,
  SnapStartConf,
} from 'aws-cdk-lib/aws-lambda';
import { Duration, Stack } from 'aws-cdk-lib';
import { RuntimeConfig } from '../../core/runtime-config.js';
import { CorsHttpMethod, CfnApi } from 'aws-cdk-lib/aws-apigatewayv2';
import { HttpIamAuthorizer } from 'aws-cdk-lib/aws-apigatewayv2-authorizers';
import { HttpLambdaIntegration } from 'aws-cdk-lib/aws-apigatewayv2-integrations';
import { Grant, IGrantable } from 'aws-cdk-lib/aws-iam';
import {
  ApiIntegrations,
  HttpApiIntegration,
  IntegrationBuilder,
} from '../../core/api/utils.js';
import { HttpApi } from '../../core/api/http-api.js';
import {
  OPERATION_DETAILS,
  Operations,
} from '../../generated/test-api/metadata.gen.js';

/**
 * Properties for creating a TestApi construct
 *
 * @template TIntegrations - Map of operation names to their integrations
 */
export interface TestApiProps<
  TIntegrations extends ApiIntegrations<Operations, HttpApiIntegration>,
> {
  /**
   * Map of operation names to their API Gateway integrations
   */
  integrations: TIntegrations;
}

/**
 * A CDK construct that creates and configures an AWS API Gateway HTTP API
 * specifically for TestApi.
 * @template TIntegrations - Map of operation names to their integrations
 */
export class TestApi<
  TIntegrations extends ApiIntegrations<Operations, HttpApiIntegration>,
> extends HttpApi<Operations, TIntegrations> {
  /**
   * Creates default integrations for all operations, which implement each operation as
   * its own individual lambda function.
   *
   * @param scope - The CDK construct scope
   * @returns An IntegrationBuilder with default lambda integrations
   */
  public static defaultIntegrations = (scope: Construct) => {
    const rc = RuntimeConfig.ensure(scope);
    return IntegrationBuilder.http({
      pattern: 'isolated',
      operations: OPERATION_DETAILS,
      defaultIntegrationOptions: <FunctionProps>{
        runtime: Runtime.PYTHON_3_14,
        handler: 'run.sh',
        code: Code.fromAsset(
          url.fileURLToPath(
            new URL(
              '../../../../../../dist/apps/nested/path/test_api/bundle-x86',
              import.meta.url,
            ),
          ),
        ),
        timeout: Duration.seconds(30),
        tracing: Tracing.ACTIVE,
        snapStart: SnapStartConf.ON_PUBLISHED_VERSIONS,
      },
      buildDefaultIntegration: (op, props: FunctionProps) => {
        const handler = new Function(scope, \`TestApi\${op}Handler\`, props);
        handler.addEnvironment(
          'RUNTIME_CONFIG_APP_ID',
          rc.appConfigApplicationId,
        );
        handler.addEnvironment('PORT', '8000');
        handler.addEnvironment('AWS_LWA_INVOKE_MODE', 'buffered');
        handler.addEnvironment('AWS_LAMBDA_EXEC_WRAPPER', '/opt/bootstrap');
        rc.grantReadAppConfig(handler);
        const stack = Stack.of(scope);
        handler.addLayers(
          LayerVersion.fromLayerVersionArn(
            scope,
            \`TestApi\${op}LWALayer\`,
            \`arn:aws:lambda:\${stack.region}:753240598075:layer:LambdaAdapterLayerX86:24\`,
          ),
        );
        return {
          handler,
          integration: new HttpLambdaIntegration(
            \`TestApi\${op}Integration\`,
            handler.currentVersion,
          ),
        };
      },
    });
  };

  constructor(
    scope: Construct,
    id: string,
    props: TestApiProps<TIntegrations>,
  ) {
    super(scope, id, {
      apiName: 'TestApi',
      corsPreflight: {
        allowOrigins: ['*'],
        allowMethods: [CorsHttpMethod.ANY],
        allowHeaders: [
          'authorization',
          'content-type',
          'x-amz-content-sha256',
          'x-amz-date',
          'x-amz-security-token',
        ],
      },
      defaultAuthorizer: new HttpIamAuthorizer(),
      operations: OPERATION_DETAILS,
      ...props,
    });
  }

  /**
   * Restricts CORS to the provided origins
   *
   * Configures the provided CloudFront distribution domains or origin strings
   * as the only permitted CORS origins
   * in the API gateway. The CORS origins are not configured within the AWS Lambda
   * integrations since the associated header is controlled by API Gateway v2.
   *
   * @param origins - The origin strings, CloudFront distributions, or objects containing a CloudFront distribution to grant CORS from
   */
  public restrictCorsTo(
    ...origins: (
      | string
      | Distribution
      | { cloudFrontDistribution: Distribution }
    )[]
  ) {
    const allowedOrigins = origins.map((origin) =>
      typeof origin === 'string'
        ? origin
        : 'cloudFrontDistribution' in origin
          ? \`https://\${origin.cloudFrontDistribution.distributionDomainName}\`
          : \`https://\${origin.distributionDomainName}\`,
    );

    const cfnApi = this.api.node.defaultChild;
    if (!(cfnApi instanceof CfnApi)) {
      throw new Error(
        'Unable to configure CORS: API default child is not a CfnApi instance',
      );
    }

    cfnApi.corsConfiguration = {
      allowOrigins: allowedOrigins,
      allowMethods: [CorsHttpMethod.ANY],
      allowHeaders: [
        'authorization',
        'content-type',
        'x-amz-content-sha256',
        'x-amz-date',
        'x-amz-security-token',
      ],
    };
  }

  /**
   * Grants IAM permissions to invoke any method on this API.
   *
   * @param grantee - The IAM principal to grant permissions to
   */
  public grantInvokeAccess(grantee: IGrantable) {
    Grant.addToPrincipal({
      grantee,
      actions: ['execute-api:Invoke'],
      resourceArns: [this.api.arnForExecuteApi('*', '/*', '*')],
    });
  }
}
"
`;

exports[`fastapi project generator > should set up shared constructs for http > utils.ts 1`] = `
"import { Integration, MethodOptions } from 'aws-cdk-lib/aws-apigateway';
import {
  HttpRouteIntegration,
  AddRoutesOptions,
} from 'aws-cdk-lib/aws-apigatewayv2';

/**
 * Type representing applicable HTTP Methods in API Gateway
 */
export type HttpMethod =
  | 'ANY'
  | 'DELETE'
  | 'GET'
  | 'HEAD'
  | 'OPTIONS'
  | 'PATCH'
  | 'POST'
  | 'PUT';

/**
 * Defines the details of an API operation.
 */
export interface OperationDetails {
  /**
   * The URL path for the operation
   */
  path: string;

  /**
   * The HTTP method for the operation
   */
  method: HttpMethod;
}

/**
 * Represents an API Gateway REST API integration that can be attached to API methods.
 */
export interface RestApiIntegration {
  integration: Integration;
  options?: MethodOptions;
}

/**
 * Represents an API Gateway HTTP API that can be attached to API methods.
 */
export interface HttpApiIntegration {
  integration: HttpRouteIntegration;
  options?: Omit<AddRoutesOptions, 'path' | 'methods' | 'integration'>;
}

/**
 * Options for constructing an IntegrationBuilder with a shared integration pattern.
 * A single default integration is built once (for '$router') and reused for all operations.
 */
interface SharedIntegrationBuilderProps<
  TOperation extends string,
  TDefaultIntegrationProps extends object,
  TDefaultIntegration,
> {
  pattern: 'shared';
  /** Map of operation names to their API path and HTTP method details */
  operations: Record<TOperation, OperationDetails>;
  /** Default configuration options for integrations */
  defaultIntegrationOptions: TDefaultIntegrationProps;
  /** Function to create a default integration for the shared router */
  buildDefaultIntegration: (
    op: '$router',
    props: TDefaultIntegrationProps,
  ) => TDefaultIntegration;
}

/**
 * Options for constructing an IntegrationBuilder with an isolated integration pattern.
 * A separate default integration is built per operation.
 */
interface IsolatedIntegrationBuilderProps<
  TOperation extends string,
  TDefaultIntegrationProps extends object,
  TDefaultIntegration,
> {
  pattern: 'isolated';
  /** Map of operation names to their API path and HTTP method details */
  operations: Record<TOperation, OperationDetails>;
  /** Default configuration options for integrations */
  defaultIntegrationOptions: TDefaultIntegrationProps;
  /** Function to create a default integration for an operation */
  buildDefaultIntegration: (
    op: TOperation,
    props: TDefaultIntegrationProps,
  ) => TDefaultIntegration;
}

/**
 * Options for constructing an IntegrationBuilder
 */
export type IntegrationBuilderProps<
  TOperation extends string,
  TBaseIntegration,
  TDefaultIntegrationProps extends object,
  TDefaultIntegration extends TBaseIntegration,
> =
  | SharedIntegrationBuilderProps<
      TOperation,
      TDefaultIntegrationProps,
      TDefaultIntegration
    >
  | IsolatedIntegrationBuilderProps<
      TOperation,
      TDefaultIntegrationProps,
      TDefaultIntegration
    >;

/**
 * Resolves the default integration keys based on the pattern.
 * - 'shared': only '$router' is a default key
 * - 'isolated': all TOperation keys are default keys
 */
type DefaultIntegrationKeys<
  TPattern extends 'shared' | 'isolated',
  TOperation extends string,
> = TPattern extends 'shared' ? '$router' : TOperation;

/**
 * Shared integration record: $router is required, individual operations are optional.
 */
type SharedIntegrations<TOperation extends string, TBaseIntegration> = {
  $router: TBaseIntegration;
} & Partial<Record<TOperation, TBaseIntegration>>;

/**
 * Valid integration record types for an API.
 * Either all operations are provided (isolated), or $router is provided
 * with optional per-operation overrides (shared).
 */
export type ApiIntegrations<TOperation extends string, TBaseIntegration> =
  | SharedIntegrations<TOperation, TBaseIntegration>
  | (Record<TOperation, TBaseIntegration> & { $router?: never });

/**
 * A builder class for creating API integrations with flexible configuration options.
 *
 * This class implements the builder pattern to create a set of API integrations
 * with support for default configurations and selective overrides.
 *
 * @template TOperation - String literal type representing operation names
 * @template TBaseIntegration - Base type for all integrations
 * @template TIntegrations - Record mapping integration keys to their integrations
 * @template TDefaultIntegrationProps - Type for default integration properties
 * @template TDefaultIntegration - Type for default integration implementation
 * @template TPattern - The integration pattern ('shared' or 'isolated')
 * @template TOverridden - Union of operation names that have been overridden
 * @template TOperationOptioned - Union of operation names with per-operation options
 */
export class IntegrationBuilder<
  TOperation extends string,
  TBaseIntegration,
  TIntegrations extends Record<string, TBaseIntegration>,
  TDefaultIntegrationProps extends object,
  TDefaultIntegration extends TBaseIntegration,
  TPattern extends 'shared' | 'isolated',
  TOverridden extends string = never,
  TOperationOptioned extends string = never,
> {
  /** Options for the integration builder */
  private options: IntegrationBuilderProps<
    TOperation,
    TBaseIntegration,
    TDefaultIntegrationProps,
    TDefaultIntegration
  >;

  /** Map of operation names to their custom integrations */
  private integrations: Partial<TIntegrations> = {};

  /** Map of default integration keys to per-operation default option overrides */
  private perOperationOptions: Partial<
    Record<string, Partial<TDefaultIntegrationProps>>
  > = {};

  /**
   * Create an Integration Builder for an HTTP API with a shared pattern
   */
  public static http<
    TOperation extends string,
    TDefaultIntegrationProps extends object,
    TDefaultIntegration extends HttpApiIntegration,
  >(
    options: SharedIntegrationBuilderProps<
      TOperation,
      TDefaultIntegrationProps,
      TDefaultIntegration
    >,
  ): IntegrationBuilder<
    TOperation,
    HttpApiIntegration,
    Record<'$router', TDefaultIntegration>,
    TDefaultIntegrationProps,
    TDefaultIntegration,
    'shared'
  >;
  /**
   * Create an Integration Builder for an HTTP API with an isolated pattern
   */
  public static http<
    TOperation extends string,
    TDefaultIntegrationProps extends object,
    TDefaultIntegration extends HttpApiIntegration,
  >(
    options: IsolatedIntegrationBuilderProps<
      TOperation,
      TDefaultIntegrationProps,
      TDefaultIntegration
    >,
  ): IntegrationBuilder<
    TOperation,
    HttpApiIntegration,
    Record<TOperation, TDefaultIntegration>,
    TDefaultIntegrationProps,
    TDefaultIntegration,
    'isolated'
  >;
  public static http<
    TOperation extends string,
    TDefaultIntegrationProps extends object,
    TDefaultIntegration extends HttpApiIntegration,
    TPattern extends 'shared' | 'isolated',
  >(
    options:
      | SharedIntegrationBuilderProps<
          TOperation,
          TDefaultIntegrationProps,
          TDefaultIntegration
        >
      | IsolatedIntegrationBuilderProps<
          TOperation,
          TDefaultIntegrationProps,
          TDefaultIntegration
        >,
  ) {
    return new IntegrationBuilder<
      TOperation,
      HttpApiIntegration,
      Record<DefaultIntegrationKeys<TPattern, TOperation>, TDefaultIntegration>,
      TDefaultIntegrationProps,
      TDefaultIntegration,
      TPattern
    >(options);
  }

  /**
   * Create an Integration Builder for a REST API with a shared pattern
   */
  public static rest<
    TOperation extends string,
    TDefaultIntegrationProps extends object,
    TDefaultIntegration extends RestApiIntegration,
  >(
    options: SharedIntegrationBuilderProps<
      TOperation,
      TDefaultIntegrationProps,
      TDefaultIntegration
    >,
  ): IntegrationBuilder<
    TOperation,
    RestApiIntegration,
    Record<'$router', TDefaultIntegration>,
    TDefaultIntegrationProps,
    TDefaultIntegration,
    'shared'
  >;
  /**
   * Create an Integration Builder for a REST API with an isolated pattern
   */
  public static rest<
    TOperation extends string,
    TDefaultIntegrationProps extends object,
    TDefaultIntegration extends RestApiIntegration,
  >(
    options: IsolatedIntegrationBuilderProps<
      TOperation,
      TDefaultIntegrationProps,
      TDefaultIntegration
    >,
  ): IntegrationBuilder<
    TOperation,
    RestApiIntegration,
    Record<TOperation, TDefaultIntegration>,
    TDefaultIntegrationProps,
    TDefaultIntegration,
    'isolated'
  >;
  public static rest<
    TOperation extends string,
    TDefaultIntegrationProps extends object,
    TDefaultIntegration extends RestApiIntegration,
    TPattern extends 'shared' | 'isolated',
  >(
    options:
      | SharedIntegrationBuilderProps<
          TOperation,
          TDefaultIntegrationProps,
          TDefaultIntegration
        >
      | IsolatedIntegrationBuilderProps<
          TOperation,
          TDefaultIntegrationProps,
          TDefaultIntegration
        >,
  ) {
    return new IntegrationBuilder<
      TOperation,
      RestApiIntegration,
      Record<DefaultIntegrationKeys<TPattern, TOperation>, TDefaultIntegration>,
      TDefaultIntegrationProps,
      TDefaultIntegration,
      TPattern
    >(options);
  }

  private constructor(
    options: IntegrationBuilderProps<
      TOperation,
      TBaseIntegration,
      TDefaultIntegrationProps,
      TDefaultIntegration
    >,
  ) {
    this.options = options;
  }

  /**
   * Overrides default integrations with custom implementations for specific operations.
   *
   * Operations which have per-operation options set via withOperationOptions cannot be
   * overridden, since these still use the default integration.
   *
   * @param overrides - Map of operation names to their custom integration implementations
   * @returns The builder instance with updated type information reflecting the overrides
   */
  public withOverrides<
    TOverrideIntegrations extends Partial<
      Record<Exclude<TOperation, TOperationOptioned>, TBaseIntegration>
    >,
  >(overrides: TOverrideIntegrations) {
    this.integrations = { ...this.integrations, ...overrides };
    // Re-type to include the overridden integration types.
    // If all operations are overridden in a 'shared' pattern, drop '$router' from the type.
    type MergedIntegrations = [TOperation] extends [keyof TOverrideIntegrations]
      ? Omit<TIntegrations, keyof TOverrideIntegrations | '$router'> &
          TOverrideIntegrations
      : Omit<TIntegrations, keyof TOverrideIntegrations> &
          TOverrideIntegrations;
    return this as unknown as IntegrationBuilder<
      TOperation,
      TBaseIntegration,
      MergedIntegrations,
      TDefaultIntegrationProps,
      TDefaultIntegration,
      TPattern,
      TOverridden | Extract<keyof TOverrideIntegrations, string>,
      TOperationOptioned
    >;
  }

  /**
   * Updates the default integration options that will be used for operations
   * without custom overrides.
   *
   * @param options - Partial default integration options to merge with existing defaults
   * @returns The builder instance
   */
  public withDefaultOptions(options: Partial<TDefaultIntegrationProps>) {
    this.options.defaultIntegrationOptions = {
      ...this.options.defaultIntegrationOptions,
      ...options,
    };
    return this;
  }

  /**
   * Updates the default integration options for specific operations, without
   * affecting the others. The given options are merged with the defaults (and
   * any options set via withDefaultOptions) when building each default integration.
   *
   * Operations which have been replaced via withOverrides cannot be targeted, since
   * they no longer use the default integration.
   *
   * @param options - Map of operation names to partial default integration options
   * @returns The builder instance
   */
  public withOperationOptions<
    TOptions extends Partial<
      Record<
        Exclude<DefaultIntegrationKeys<TPattern, TOperation>, TOverridden>,
        Partial<TDefaultIntegrationProps>
      >
    >,
  >(options: TOptions) {
    Object.entries(options).forEach(([op, opOptions]) => {
      this.perOperationOptions[op] = {
        ...this.perOperationOptions[op],
        ...(opOptions as Partial<TDefaultIntegrationProps>),
      };
    });
    return this as unknown as IntegrationBuilder<
      TOperation,
      TBaseIntegration,
      TIntegrations,
      TDefaultIntegrationProps,
      TDefaultIntegration,
      TPattern,
      TOverridden,
      TOperationOptioned | Extract<keyof TOptions, string>
    >;
  }

  /**
   * Builds and returns the complete set of integrations.
   *
   * This method creates the final integration map by:
   * 1. Including all custom overrides provided via withOverrides()
   * 2. Creating default integrations for any operations without custom overrides
   *
   * For the 'shared' pattern, a single router integration is built and assigned to '$router'.
   * For the 'isolated' pattern, each operation without an override gets its own integration.
   *
   * @returns A complete map of integration keys to their integrations
   */
  public build(): TIntegrations {
    const options = this.options;
    const buildOptionsFor = (op: string): TDefaultIntegrationProps => ({
      ...options.defaultIntegrationOptions,
      ...this.perOperationOptions[op],
    });
    return {
      ...Object.fromEntries(
        options.pattern === 'shared'
          ? [
              [
                '$router',
                options.buildDefaultIntegration(
                  '$router',
                  buildOptionsFor('$router'),
                ),
              ],
            ]
          : (Object.keys(options.operations) as TOperation[])
              .filter(
                (op) =>
                  !this.integrations[op as keyof typeof this.integrations],
              )
              .map((op) => [
                op,
                options.buildDefaultIntegration(op, buildOptionsFor(op)),
              ]),
      ),
      ...this.integrations,
    } as unknown as TIntegrations;
  }
}
"
`;

exports[`fastapi project generator > should set up shared constructs for rest > rest-api.ts 1`] = `
"import { Construct, IConstruct } from 'constructs';
import {
  AccessLogFormat,
  Cors,
  LogGroupLogDestination,
  Resource,
  RestApi as _RestApi,
  RestApiProps as _RestApiProps,
  IResource,
  Stage,
  ThrottleSettings,
} from 'aws-cdk-lib/aws-apigateway';
import { IAspect, Stack } from 'aws-cdk-lib';
import {
  CfnLoggingConfiguration,
  CfnWebACL,
  CfnWebACLAssociation,
} from 'aws-cdk-lib/aws-wafv2';
import { LogGroup, RetentionDays } from 'aws-cdk-lib/aws-logs';
import { Key } from 'aws-cdk-lib/aws-kms';
import { ServicePrincipal } from 'aws-cdk-lib/aws-iam';
import { RuntimeConfig } from '../runtime-config.js';
import { ApiGatewayAccount } from './api-gateway-account.js';
import {
  ApiIntegrations,
  OperationDetails,
  RestApiIntegration,
} from './utils.js';
import { suppressRules } from '../checkov.js';

/**
 * Properties for creating a RestApi construct.
 *
 * @template TIntegrations - Record mapping integration keys to their integrations
 * @template TOperation - String literal type representing operation names
 */
export interface RestApiProps<
  TIntegrations extends ApiIntegrations<TOperation, RestApiIntegration>,
  TOperation extends string,
> extends _RestApiProps {
  /**
   * Unique name for the API, used in runtime configuration
   */
  readonly apiName: string;
  /**
   * Map of operation names to their API path and HTTP method details
   */
  readonly operations: Record<TOperation, OperationDetails>;
  /**
   * Map of integration keys to their API Gateway integrations
   */
  readonly integrations: TIntegrations;
  /**
   * Whether to enable AWS WAFv2 with the default managed ruleset
   * (AWSManagedRulesCommonRuleSet and AWSManagedRulesKnownBadInputsRuleSet)
   * and associate it with the API's default stage.
   *
   * @default true
   */
  readonly enableWaf?: boolean;
  /**
   * Default throttling limits applied to all methods on the API's default stage.
   *
   * @default { rateLimit: 10000, burstLimit: 5000 }
   */
  readonly throttle?: ThrottleSettings;
}

/**
 * A CDK construct that creates and configures an AWS API Gateway REST API.
 *
 * This class extends the base CDK RestApi with additional functionality:
 * - Type-safe operation and integration management
 * - Automatic resource creation based on path patterns
 * - Integration with runtime configuration for client discovery
 *
 * @template TOperation - String literal type representing operation names
 * @template TIntegrations - Record mapping integration keys to their integrations
 */
export class RestApi<
  TOperation extends string,
  TIntegrations extends ApiIntegrations<TOperation, RestApiIntegration>,
> extends Construct {
  /** The underlying CDK RestApi instance */
  public readonly api: _RestApi;

  /** Map of integration keys to their API Gateway integrations */
  public readonly integrations: TIntegrations;

  /** The WAFv2 Web ACL associated with the API's default stage, if WAF is enabled */
  public readonly webAcl?: CfnWebACL;

  constructor(
    scope: Construct,
    id: string,
    {
      apiName,
      operations,
      integrations,
      enableWaf = true,
      throttle = { rateLimit: 10000, burstLimit: 5000 },
      ...props
    }: RestApiProps<TIntegrations, TOperation>,
  ) {
    super(scope, id);
    this.integrations = integrations;

    // Account-level CloudWatch role required for REST API access logging
    const account = ApiGatewayAccount.ensure(this);

    // KMS key for encrypting logs at rest, usable by CloudWatch Logs
    const logsKey = new Key(this, 'LogsKey', {
      enableKeyRotation: true,
    });
    logsKey.grantEncryptDecrypt(
      new ServicePrincipal(\`logs.\${Stack.of(this).region}.amazonaws.com\`),
    );

    const accessLogs = new LogGroup(this, 'AccessLogs', {
      retention: RetentionDays.ONE_YEAR,
      encryptionKey: logsKey,
    });

    // Create the API Gateway REST API
    this.api = new _RestApi(this, 'Api', {
      ...props,
      deployOptions: {
        accessLogDestination: new LogGroupLogDestination(accessLogs),
        accessLogFormat: AccessLogFormat.jsonWithStandardFields(),
        ...props.deployOptions,
        methodOptions: {
          ...props.deployOptions?.methodOptions,
          // Default throttling applied to all resource paths and methods
          '/*/*': {
            throttlingRateLimit: throttle.rateLimit,
            throttlingBurstLimit: throttle.burstLimit,
            ...props.deployOptions?.methodOptions?.['/*/*'],
          },
        },
      },
    });
    // Ensure the account-level role is configured before the stage is created
    this.api.deploymentStage.node.addDependency(account.resource);

    if (enableWaf) {
      this.webAcl = new CfnWebACL(this, 'WebAcl', {
        defaultAction: { allow: {} },
        scope: 'REGIONAL',
        visibilityConfig: {
          cloudWatchMetricsEnabled: true,
          metricName: \`\${apiName}WebAcl\`,
          sampledRequestsEnabled: true,
        },
        rules: [
          {
            name: 'CRSRule',
            priority: 0,
            statement: {
              managedRuleGroupStatement: {
                name: 'AWSManagedRulesCommonRuleSet',
                vendorName: 'AWS',
                // Count instead of Block: the CRS 8 KB body limit is too restrictive for most APIs.
                ruleActionOverrides: [
                  {
                    name: 'SizeRestrictions_BODY',
                    actionToUse: { count: {} },
                  },
                ],
              },
            },
            visibilityConfig: {
              cloudWatchMetricsEnabled: true,
              metricName: \`\${apiName}WebAcl-CRS\`,
              sampledRequestsEnabled: true,
            },
            overrideAction: {
              none: {},
            },
          },
          {
            name: 'KnownBadInputsRule',
            priority: 1,
            statement: {
              managedRuleGroupStatement: {
                name: 'AWSManagedRulesKnownBadInputsRuleSet',
                vendorName: 'AWS',
              },
            },
            visibilityConfig: {
              cloudWatchMetricsEnabled: true,
              metricName: \`\${apiName}WebAcl-KnownBadInputs\`,
              sampledRequestsEnabled: true,
            },
            overrideAction: {
              none: {},
            },
          },
        ],
      });

      new CfnWebACLAssociation(this, 'WebAclAssociation', {
        resourceArn: this.api.deploymentStage.stageArn,
        webAclArn: this.webAcl.attrArn,
      });

      // Send WAF request logs to CloudWatch. The log group name must start with
      // \`aws-waf-logs-\` to satisfy the WAFv2 logging destination requirement.
      const wafLogGroup = new LogGroup(this, 'WebAclLogs', {
        logGroupName: \`aws-waf-logs-\${apiName}-\${this.node.addr.slice(-8)}\`,
        retention: RetentionDays.ONE_YEAR,
        encryptionKey: logsKey,
      });

      new CfnLoggingConfiguration(this, 'WebAclLoggingConfig', {
        resourceArn: this.webAcl.attrArn,
        logDestinationConfigs: [wafLogGroup.logGroupArn],
      });
    }

    suppressRules(
      this.api,
      ['CKV_AWS_120'],
      'Caching not required for this use case',
      (c) => c instanceof Stage,
    );

    // Resolve the integration for a given operation.
    // If the operation has a dedicated integration, use it; otherwise fall back to $router.
    const resolveIntegration = (op: TOperation): RestApiIntegration => {
      const record = integrations as Record<string, RestApiIntegration>;
      if (op in record) {
        return record[op];
      }
      if ('$router' in record) {
        return record['$router'];
      }
      throw new Error(
        \`No integration found for operation '\${op}' and no $router integration available\`,
      );
    };

    // Create API resources and methods for each operation
    (Object.entries(operations) as [TOperation, OperationDetails][]).forEach(
      ([op, details]) => {
        const integration = resolveIntegration(op);
        const resource = this.getOrCreateResource(
          this.api.root,
          (details.path.startsWith('/')
            ? details.path.slice(1)
            : details.path
          ).split('/'),
        );
        resource.addMethod(
          details.method,
          integration.integration,
          integration.options,
        );
      },
    );

    // Register the API URL in runtime configuration for client discovery
    const rc = RuntimeConfig.ensure(this);
    rc.set('connection', 'apis', {
      ...rc.get('connection').apis,
      [apiName]: this.api.url!,
    });
  }

  /**
   * Recursively creates or retrieves API Gateway resources based on a path pattern.
   *
   * @param resource - The parent API Gateway resource
   * @param pathParts - Array of path segments to create or retrieve
   * @returns The API Gateway resource at the end of the path
   */
  private getOrCreateResource(
    resource: IResource,
    [nextPathPart, ...pathParts]: string[],
  ): IResource {
    if (!nextPathPart) {
      return resource;
    }
    const childResource =
      resource.getResource(nextPathPart) ?? resource.addResource(nextPathPart);
    return this.getOrCreateResource(childResource, pathParts);
  }
}

export class AddCorsPreflightAspect implements IAspect {
  private getAllowedOrigins: () => readonly string[];
  constructor(getAllowedOrigins: () => readonly string[]) {
    this.getAllowedOrigins = getAllowedOrigins;
  }
  public visit(node: IConstruct): void {
    if (node instanceof Resource) {
      node.addCorsPreflight({
        allowOrigins: [...this.getAllowedOrigins()],
        allowMethods: Cors.ALL_METHODS,
      });
    }
  }
}
"
`;

exports[`fastapi project generator > should set up shared constructs for rest > test-api.ts 1`] = `
"import { Construct } from 'constructs';
import * as url from 'url';
import { Distribution } from 'aws-cdk-lib/aws-cloudfront';
import {
  Code,
  Runtime,
  Function,
  FunctionProps,
  Tracing,
  LayerVersion,
  SnapStartConf,
} from 'aws-cdk-lib/aws-lambda';
import { RuntimeConfig } from '../../core/runtime-config.js';
import {
  AuthorizationType,
  LambdaIntegration,
  ResponseTransferMode,
} from 'aws-cdk-lib/aws-apigateway';
import { Aspects, Duration, Stack } from 'aws-cdk-lib';
import {
  PolicyDocument,
  PolicyStatement,
  Effect,
  AnyPrincipal,
  IGrantable,
  Grant,
} from 'aws-cdk-lib/aws-iam';
import {
  ApiIntegrations,
  IntegrationBuilder,
  RestApiIntegration,
} from '../../core/api/utils.js';
import { AddCorsPreflightAspect, RestApi } from '../../core/api/rest-api.js';
import {
  OPERATION_DETAILS,
  Operations,
} from '../../generated/test-api/metadata.gen.js';

/**
 * Properties for creating a TestApi construct
 *
 * @template TIntegrations - Map of operation names to their integrations
 */
export interface TestApiProps<
  TIntegrations extends ApiIntegrations<Operations, RestApiIntegration>,
> {
  /**
   * Map of operation names to their API Gateway integrations
   */
  integrations: TIntegrations;
  /**
   * Whether to enable AWS WAFv2 with the default managed ruleset on the API's default stage.
   *
   * @default true
   */
  enableWaf?: boolean;
}

/**
 * A CDK construct that creates and configures an AWS API Gateway REST API
 * specifically for TestApi.
 * @template TIntegrations - Map of operation names to their integrations
 */
export class TestApi<
  TIntegrations extends ApiIntegrations<Operations, RestApiIntegration>,
> extends RestApi<Operations, TIntegrations> {
  private allowedOrigins: readonly string[] = ['*'];

  /**
   * Creates default integrations for all operations, which implement each operation as
   * its own individual lambda function.
   *
   * @param scope - The CDK construct scope
   * @returns An IntegrationBuilder with default lambda integrations
   */
  public static defaultIntegrations = (scope: Construct) => {
    const rc = RuntimeConfig.ensure(scope);
    return IntegrationBuilder.rest({
      pattern: 'isolated',
      operations: OPERATION_DETAILS,
      defaultIntegrationOptions: <FunctionProps>{
        runtime: Runtime.PYTHON_3_14,
        handler: 'run.sh',
        code: Code.fromAsset(
          url.fileURLToPath(
            new URL(
              '../../../../../../dist/apps/nested/path/test_api/bundle-x86',
              import.meta.url,
            ),
          ),
        ),
        timeout: Duration.seconds(30),
        tracing: Tracing.ACTIVE,
        snapStart: SnapStartConf.ON_PUBLISHED_VERSIONS,
      },
      buildDefaultIntegration: (op, props: FunctionProps) => {
        const handler = new Function(scope, \`TestApi\${op}Handler\`, props);
        handler.addEnvironment(
          'RUNTIME_CONFIG_APP_ID',
          rc.appConfigApplicationId,
        );
        handler.addEnvironment('PORT', '8000');
        handler.addEnvironment('AWS_LWA_INVOKE_MODE', 'response_stream');
        handler.addEnvironment('AWS_LAMBDA_EXEC_WRAPPER', '/opt/bootstrap');
        rc.grantReadAppConfig(handler);
        const stack = Stack.of(scope);
        handler.addLayers(
          LayerVersion.fromLayerVersionArn(
            scope,
            \`TestApi\${op}LWALayer\`,
            \`arn:aws:lambda:\${stack.region}:753240598075:layer:LambdaAdapterLayerX86:24\`,
          ),
        );
        return {
          handler,
          integration: new LambdaIntegration(handler.currentVersion, {
            responseTransferMode: ResponseTransferMode.STREAM,
          }),
        };
      },
    });
  };

  constructor(
    scope: Construct,
    id: string,
    props: TestApiProps<TIntegrations>,
  ) {
    super(scope, id, {
      apiName: 'TestApi',
      defaultMethodOptions: {
        authorizationType: AuthorizationType.IAM,
      },
      deployOptions: {
        tracingEnabled: true,
      },
      policy: new PolicyDocument({
        statements: [
          // Open up OPTIONS to allow browsers to make unauthenticated preflight requests
          new PolicyStatement({
            effect: Effect.ALLOW,
            principals: [new AnyPrincipal()],
            actions: ['execute-api:Invoke'],
            resources: ['execute-api:/*/OPTIONS/*'],
          }),
        ],
      }),
      operations: OPERATION_DETAILS,
      ...props,
    });
    Aspects.of(this).add(new AddCorsPreflightAspect(() => this.allowedOrigins));
  }

  /**
   * Restricts CORS to the provided origins
   *
   * Configures the provided CloudFront distribution domains or origin strings
   * as the only permitted CORS origins in API Gateway preflight responses and the
   * AWS Lambda integrations.
   *
   * @param origins - The origin strings, CloudFront distributions, or objects containing a CloudFront distribution to grant CORS from
   */
  public restrictCorsTo(
    ...origins: (
      | string
      | Distribution
      | { cloudFrontDistribution: Distribution }
    )[]
  ) {
    const allowedOrigins = origins.map((origin) =>
      typeof origin === 'string'
        ? origin
        : 'cloudFrontDistribution' in origin
          ? \`https://\${origin.cloudFrontDistribution.distributionDomainName}\`
          : \`https://\${origin.distributionDomainName}\`,
    );

    this.allowedOrigins = allowedOrigins;

    // Set ALLOWED_ORIGINS environment variable for all Lambda integrations
    Object.values(this.integrations).forEach((integration) => {
      if ('handler' in integration && integration.handler instanceof Function) {
        integration.handler.addEnvironment(
          'ALLOWED_ORIGINS',
          allowedOrigins.join(','),
        );
      }
    });
  }

  /**
   * Grants IAM permissions to invoke any method on this API.
   *
   * @param grantee - The IAM principal to grant permissions to
   */
  public grantInvokeAccess(grantee: IGrantable) {
    // Here we grant grantee permission to call the api.
    // Machine to machine fine-grained access can be defined here using more specific principals (eg roles or
    // users) and resources (eg which api paths may be invoked by which principal) if required.
    this.api.addToResourcePolicy(
      new PolicyStatement({
        effect: Effect.ALLOW,
        principals: [grantee.grantPrincipal],
        actions: ['execute-api:Invoke'],
        resources: ['execute-api:/*'],
      }),
    );

    Grant.addToPrincipal({
      grantee,
      actions: ['execute-api:Invoke'],
      resourceArns: [this.api.arnForExecuteApi('*', '/*', '*')],
    });
  }
}
"
`;

exports[`fastapi project generator > should set up shared constructs for rest > utils.ts 1`] = `
"import { Integration, MethodOptions } from 'aws-cdk-lib/aws-apigateway';
import {
  HttpRouteIntegration,
  AddRoutesOptions,
} from 'aws-cdk-lib/aws-apigatewayv2';

/**
 * Type representing applicable HTTP Methods in API Gateway
 */
export type HttpMethod =
  | 'ANY'
  | 'DELETE'
  | 'GET'
  | 'HEAD'
  | 'OPTIONS'
  | 'PATCH'
  | 'POST'
  | 'PUT';

/**
 * Defines the details of an API operation.
 */
export interface OperationDetails {
  /**
   * The URL path for the operation
   */
  path: string;

  /**
   * The HTTP method for the operation
   */
  method: HttpMethod;
}

/**
 * Represents an API Gateway REST API integration that can be attached to API methods.
 */
export interface RestApiIntegration {
  integration: Integration;
  options?: MethodOptions;
}

/**
 * Represents an API Gateway HTTP API that can be attached to API methods.
 */
export interface HttpApiIntegration {
  integration: HttpRouteIntegration;
  options?: Omit<AddRoutesOptions, 'path' | 'methods' | 'integration'>;
}

/**
 * Options for constructing an IntegrationBuilder with a shared integration pattern.
 * A single default integration is built once (for '$router') and reused for all operations.
 */
interface SharedIntegrationBuilderProps<
  TOperation extends string,
  TDefaultIntegrationProps extends object,
  TDefaultIntegration,
> {
  pattern: 'shared';
  /** Map of operation names to their API path and HTTP method details */
  operations: Record<TOperation, OperationDetails>;
  /** Default configuration options for integrations */
  defaultIntegrationOptions: TDefaultIntegrationProps;
  /** Function to create a default integration for the shared router */
  buildDefaultIntegration: (
    op: '$router',
    props: TDefaultIntegrationProps,
  ) => TDefaultIntegration;
}

/**
 * Options for constructing an IntegrationBuilder with an isolated integration pattern.
 * A separate default integration is built per operation.
 */
interface IsolatedIntegrationBuilderProps<
  TOperation extends string,
  TDefaultIntegrationProps extends object,
  TDefaultIntegration,
> {
  pattern: 'isolated';
  /** Map of operation names to their API path and HTTP method details */
  operations: Record<TOperation, OperationDetails>;
  /** Default configuration options for integrations */
  defaultIntegrationOptions: TDefaultIntegrationProps;
  /** Function to create a default integration for an operation */
  buildDefaultIntegration: (
    op: TOperation,
    props: TDefaultIntegrationProps,
  ) => TDefaultIntegration;
}

/**
 * Options for constructing an IntegrationBuilder
 */
export type IntegrationBuilderProps<
  TOperation extends string,
  TBaseIntegration,
  TDefaultIntegrationProps extends object,
  TDefaultIntegration extends TBaseIntegration,
> =
  | SharedIntegrationBuilderProps<
      TOperation,
      TDefaultIntegrationProps,
      TDefaultIntegration
    >
  | IsolatedIntegrationBuilderProps<
      TOperation,
      TDefaultIntegrationProps,
      TDefaultIntegration
    >;

/**
 * Resolves the default integration keys based on the pattern.
 * - 'shared': only '$router' is a default key
 * - 'isolated': all TOperation keys are default keys
 */
type DefaultIntegrationKeys<
  TPattern extends 'shared' | 'isolated',
  TOperation extends string,
> = TPattern extends 'shared' ? '$router' : TOperation;

/**
 * Shared integration record: $router is required, individual operations are optional.
 */
type SharedIntegrations<TOperation extends string, TBaseIntegration> = {
  $router: TBaseIntegration;
} & Partial<Record<TOperation, TBaseIntegration>>;

/**
 * Valid integration record types for an API.
 * Either all operations are provided (isolated), or $router is provided
 * with optional per-operation overrides (shared).
 */
export type ApiIntegrations<TOperation extends string, TBaseIntegration> =
  | SharedIntegrations<TOperation, TBaseIntegration>
  | (Record<TOperation, TBaseIntegration> & { $router?: never });

/**
 * A builder class for creating API integrations with flexible configuration options.
 *
 * This class implements the builder pattern to create a set of API integrations
 * with support for default configurations and selective overrides.
 *
 * @template TOperation - String literal type representing operation names
 * @template TBaseIntegration - Base type for all integrations
 * @template TIntegrations - Record mapping integration keys to their integrations
 * @template TDefaultIntegrationProps - Type for default integration properties
 * @template TDefaultIntegration - Type for default integration implementation
 * @template TPattern - The integration pattern ('shared' or 'isolated')
 * @template TOverridden - Union of operation names that have been overridden
 * @template TOperationOptioned - Union of operation names with per-operation options
 */
export class IntegrationBuilder<
  TOperation extends string,
  TBaseIntegration,
  TIntegrations extends Record<string, TBaseIntegration>,
  TDefaultIntegrationProps extends object,
  TDefaultIntegration extends TBaseIntegration,
  TPattern extends 'shared' | 'isolated',
  TOverridden extends string = never,
  TOperationOptioned extends string = never,
> {
  /** Options for the integration builder */
  private options: IntegrationBuilderProps<
    TOperation,
    TBaseIntegration,
    TDefaultIntegrationProps,
    TDefaultIntegration
  >;

  /** Map of operation names to their custom integrations */
  private integrations: Partial<TIntegrations> = {};

  /** Map of default integration keys to per-operation default option overrides */
  private perOperationOptions: Partial<
    Record<string, Partial<TDefaultIntegrationProps>>
  > = {};

  /**
   * Create an Integration Builder for an HTTP API with a shared pattern
   */
  public static http<
    TOperation extends string,
    TDefaultIntegrationProps extends object,
    TDefaultIntegration extends HttpApiIntegration,
  >(
    options: SharedIntegrationBuilderProps<
      TOperation,
      TDefaultIntegrationProps,
      TDefaultIntegration
    >,
  ): IntegrationBuilder<
    TOperation,
    HttpApiIntegration,
    Record<'$router', TDefaultIntegration>,
    TDefaultIntegrationProps,
    TDefaultIntegration,
    'shared'
  >;
  /**
   * Create an Integration Builder for an HTTP API with an isolated pattern
   */
  public static http<
    TOperation extends string,
    TDefaultIntegrationProps extends object,
    TDefaultIntegration extends HttpApiIntegration,
  >(
    options: IsolatedIntegrationBuilderProps<
      TOperation,
      TDefaultIntegrationProps,
      TDefaultIntegration
    >,
  ): IntegrationBuilder<
    TOperation,
    HttpApiIntegration,
    Record<TOperation, TDefaultIntegration>,
    TDefaultIntegrationProps,
    TDefaultIntegration,
    'isolated'
  >;
  public static http<
    TOperation extends string,
    TDefaultIntegrationProps extends object,
    TDefaultIntegration extends HttpApiIntegration,
    TPattern extends 'shared' | 'isolated',
  >(
    options:
      | SharedIntegrationBuilderProps<
          TOperation,
          TDefaultIntegrationProps,
          TDefaultIntegration
        >
      | IsolatedIntegrationBuilderProps<
          TOperation,
          TDefaultIntegrationProps,
          TDefaultIntegration
        >,
  ) {
    return new IntegrationBuilder<
      TOperation,
      HttpApiIntegration,
      Record<DefaultIntegrationKeys<TPattern, TOperation>, TDefaultIntegration>,
      TDefaultIntegrationProps,
      TDefaultIntegration,
      TPattern
    >(options);
  }

  /**
   * Create an Integration Builder for a REST API with a shared pattern
   */
  public static rest<
    TOperation extends string,
    TDefaultIntegrationProps extends object,
    TDefaultIntegration extends RestApiIntegration,
  >(
    options: SharedIntegrationBuilderProps<
      TOperation,
      TDefaultIntegrationProps,
      TDefaultIntegration
    >,
  ): IntegrationBuilder<
    TOperation,
    RestApiIntegration,
    Record<'$router', TDefaultIntegration>,
    TDefaultIntegrationProps,
    TDefaultIntegration,
    'shared'
  >;
  /**
   * Create an Integration Builder for a REST API with an isolated pattern
   */
  public static rest<
    TOperation extends string,
    TDefaultIntegrationProps extends object,
    TDefaultIntegration extends RestApiIntegration,
  >(
    options: IsolatedIntegrationBuilderProps<
      TOperation,
      TDefaultIntegrationProps,
      TDefaultIntegration
    >,
  ): IntegrationBuilder<
    TOperation,
    RestApiIntegration,
    Record<TOperation, TDefaultIntegration>,
    TDefaultIntegrationProps,
    TDefaultIntegration,
    'isolated'
  >;
  public static rest<
    TOperation extends string,
    TDefaultIntegrationProps extends object,
    TDefaultIntegration extends RestApiIntegration,
    TPattern extends 'shared' | 'isolated',
  >(
    options:
      | SharedIntegrationBuilderProps<
          TOperation,
          TDefaultIntegrationProps,
          TDefaultIntegration
        >
      | IsolatedIntegrationBuilderProps<
          TOperation,
          TDefaultIntegrationProps,
          TDefaultIntegration
        >,
  ) {
    return new IntegrationBuilder<
      TOperation,
      RestApiIntegration,
      Record<DefaultIntegrationKeys<TPattern, TOperation>, TDefaultIntegration>,
      TDefaultIntegrationProps,
      TDefaultIntegration,
      TPattern
    >(options);
  }

  private constructor(
    options: IntegrationBuilderProps<
      TOperation,
      TBaseIntegration,
      TDefaultIntegrationProps,
      TDefaultIntegration
    >,
  ) {
    this.options = options;
  }

  /**
   * Overrides default integrations with custom implementations for specific operations.
   *
   * Operations which have per-operation options set via withOperationOptions cannot be
   * overridden, since these still use the default integration.
   *
   * @param overrides - Map of operation names to their custom integration implementations
   * @returns The builder instance with updated type information reflecting the overrides
   */
  public withOverrides<
    TOverrideIntegrations extends Partial<
      Record<Exclude<TOperation, TOperationOptioned>, TBaseIntegration>
    >,
  >(overrides: TOverrideIntegrations) {
    this.integrations = { ...this.integrations, ...overrides };
    // Re-type to include the overridden integration types.
    // If all operations are overridden in a 'shared' pattern, drop '$router' from the type.
    type MergedIntegrations = [TOperation] extends [keyof TOverrideIntegrations]
      ? Omit<TIntegrations, keyof TOverrideIntegrations | '$router'> &
          TOverrideIntegrations
      : Omit<TIntegrations, keyof TOverrideIntegrations> &
          TOverrideIntegrations;
    return this as unknown as IntegrationBuilder<
      TOperation,
      TBaseIntegration,
      MergedIntegrations,
      TDefaultIntegrationProps,
      TDefaultIntegration,
      TPattern,
      TOverridden | Extract<keyof TOverrideIntegrations, string>,
      TOperationOptioned
    >;
  }

  /**
   * Updates the default integration options that will be used for operations
   * without custom overrides.
   *
   * @param options - Partial default integration options to merge with existing defaults
   * @returns The builder instance
   */
  public withDefaultOptions(options: Partial<TDefaultIntegrationProps>) {
    this.options.defaultIntegrationOptions = {
      ...this.options.defaultIntegrationOptions,
      ...options,
    };
    return this;
  }

  /**
   * Updates the default integration options for specific operations, without
   * affecting the others. The given options are merged with the defaults (and
   * any options set via withDefaultOptions) when building each default integration.
   *
   * Operations which have been replaced via withOverrides cannot be targeted, since
   * they no longer use the default integration.
   *
   * @param options - Map of operation names to partial default integration options
   * @returns The builder instance
   */
  public withOperationOptions<
    TOptions extends Partial<
      Record<
        Exclude<DefaultIntegrationKeys<TPattern, TOperation>, TOverridden>,
        Partial<TDefaultIntegrationProps>
      >
    >,
  >(options: TOptions) {
    Object.entries(options).forEach(([op, opOptions]) => {
      this.perOperationOptions[op] = {
        ...this.perOperationOptions[op],
        ...(opOptions as Partial<TDefaultIntegrationProps>),
      };
    });
    return this as unknown as IntegrationBuilder<
      TOperation,
      TBaseIntegration,
      TIntegrations,
      TDefaultIntegrationProps,
      TDefaultIntegration,
      TPattern,
      TOverridden,
      TOperationOptioned | Extract<keyof TOptions, string>
    >;
  }

  /**
   * Builds and returns the complete set of integrations.
   *
   * This method creates the final integration map by:
   * 1. Including all custom overrides provided via withOverrides()
   * 2. Creating default integrations for any operations without custom overrides
   *
   * For the 'shared' pattern, a single router integration is built and assigned to '$router'.
   * For the 'isolated' pattern, each operation without an override gets its own integration.
   *
   * @returns A complete map of integration keys to their integrations
   */
  public build(): TIntegrations {
    const options = this.options;
    const buildOptionsFor = (op: string): TDefaultIntegrationProps => ({
      ...options.defaultIntegrationOptions,
      ...this.perOperationOptions[op],
    });
    return {
      ...Object.fromEntries(
        options.pattern === 'shared'
          ? [
              [
                '$router',
                options.buildDefaultIntegration(
                  '$router',
                  buildOptionsFor('$router'),
                ),
              ],
            ]
          : (Object.keys(options.operations) as TOperation[])
              .filter(
                (op) =>
                  !this.integrations[op as keyof typeof this.integrations],
              )
              .map((op) => [
                op,
                options.buildDefaultIntegration(op, buildOptionsFor(op)),
              ]),
      ),
      ...this.integrations,
    } as unknown as TIntegrations;
  }
}
"
`;
